force-app/main/default/objects/Training_Video__c/Training_Video__c.object-meta.xml
<CustomObject>
    <label>Training Video</label>
    <nameField>
        <label>Video Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Videos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>