force-app/main/default/objects/Training_Video__c/fields/Completion_Threshold__c.field-meta.xml
<CustomField><fullName>Completion_Threshold__c</fullName><label>Completion Threshold Override</label><precision>3</precision><required>false</required><scale>0</scale><type>Number</type></CustomField>