force-app/main/default/objects/Training_Video__c/fields/Content_Type__c.field-meta.xml
<CustomField><fullName>Content_Type__c</fullName><label>Content Type</label><required>false</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Salesforce File</fullName><default>true</default><label>Salesforce File</label></value><value><fullName>External Link</fullName><default>false</default><label>External Link</label></value></valueSetDefinition></valueSet></CustomField>