force-app/main/default/objects/Training_Video__c/fields/Document_Completion_Mode__c.field-meta.xml
<CustomField>
    <fullName>Document_Completion_Mode__c</fullName>
    <label>Document Completion Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Finish on last page</fullName><default>true</default><label>Finish on last page</label></value>
            <value><fullName>Automatic</fullName><default>false</default><label>Automatic</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>