force-app/main/default/objects/Training_Video__c/fields/Document_Page_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Document_Page_Requirement__c</fullName>
    <label>Document Page Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Every page</fullName><default>true</default><label>Every page</label></value>
            <value><fullName>Final page only</fullName><default>false</default><label>Final page only</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>