force-app/main/default/objects/Training_Video__c/fields/Due_Date__c.field-meta.xml
<CustomField><fullName>Due_Date__c</fullName><label>Due Date</label><required>false</required><type>Date</type></CustomField>