force-app/main/default/objects/Training_Video__c/fields/Duration_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Duration_Seconds__c</fullName>
    <label>Duration (Seconds)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
    <inlineHelpText>Total length of the video in seconds. Captured automatically when the video loads in the player.</inlineHelpText>
</CustomField>