force-app/main/default/objects/Training_Video__c/fields/External_URL__c.field-meta.xml
<CustomField><fullName>External_URL__c</fullName><label>External Video URL</label><required>false</required><type>Url</type></CustomField>