force-app/main/default/objects/Training_Video__c/fields/Folder__c.field-meta.xml
<CustomField>
    <fullName>Folder__c</fullName>
    <label>Folder</label>
    <referenceTo>Training_Folder__c</referenceTo>
    <relationshipLabel>Training Videos</relationshipLabel>
    <relationshipName>Training_Videos</relationshipName>
    <type>Lookup</type>
</CustomField>