force-app/main/default/objects/Training_Video__c/fields/Publish_Notification_Channel__c.field-meta.xml
<CustomField>
    <fullName>Publish_Notification_Channel__c</fullName>
    <label>Publish Notification Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>None</fullName><default>true</default><label>Don&apos;t notify</label></value>
            <value><fullName>In-app</fullName><default>false</default><label>In-app</label></value>
            <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
            <value><fullName>Both</fullName><default>false</default><label>Both</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>