force-app/main/default/objects/Training_Video__c/fields/Send_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Notification__c</fullName>
    <label>Send Notification</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
    <inlineHelpText>Check and save to email everyone assigned to this video a link to the training library. Clears itself after sending; check it again to re-notify.</inlineHelpText>
</CustomField>