force-app/main/default/objects/Training_Video__c/fields/Skip_Prevention__c.field-meta.xml
<CustomField><fullName>Skip_Prevention__c</fullName><label>Skip Prevention</label><required>false</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Use Global Default</fullName><default>true</default><label>Use Global Default</label></value><value><fullName>Enabled</fullName><default>false</default><label>Enabled</label></value><value><fullName>Disabled</fullName><default>false</default><label>Disabled</label></value></valueSetDefinition></valueSet></CustomField>