force-app/main/default/objects/Training_Video__c/fields/Video_Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Video_Content_Version_Id__c</fullName>
    <label>Video Content Version Id</label>
    <length>18</length>
    <type>Text</type>
    <inlineHelpText>The ContentVersion Id of the uploaded video file that plays for this record. Set automatically on upload.</inlineHelpText>
</CustomField>