force-app/main/default/objects/Training_Video__c/fields/Video_Link__c.field-meta.xml
<CustomField>
    <fullName>Video_Link__c</fullName>
    <label>Video Link</label>
    <formula>LEFT($Api.Enterprise_Server_URL_260, FIND(".my.salesforce.com", $Api.Enterprise_Server_URL_260) - 1) &amp; ".lightning.force.com/lightning/n/Training_Library?c__videoId=" &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <type>Text</type>
    <inlineHelpText>Deep link that opens this specific video in the Training Library. Use as a merge field in the notification email.</inlineHelpText>
</CustomField>